FAlign messengers icons and fixed facebook dialog position

--- a/src/index.css
+++ b/src/index.css
@@ -52,5 +52,8 @@ p {
 
 .fb_dialog_content iframe:first-child {
   bottom: 190px !important;
-  right: 3% !important;
+}
+
+iframe.fb_customer_chat_bounce_in_v2 {
+  right: 84px !important;
 }
